--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <center><h1  ><br>A powerful online engagemnet tool<br>that's intuitive and simple to use.</h1></center>
     <center><p>with stellar one-click reports and unmatched support,see how<br> Circle will make a difference in your business</p></center>
     <ul style ="padding-block:10px; margin:10px; background-color:rgb(172, 248, 223); scroll-padding-top:2px">
-    <center><h4><span>Get started free></span></h4></center>
+    <center><h4><span><button>Get started free></button></span></h4></center>
    </ul>
 
     <div> <br><br> <img src = "conf.png" alt="/" width="400px" height="400px" style="margin-left:550px;"></imgh>
@@ -108,13 +108,13 @@
 
 <br><br>
 
-    <img src="conf 2.png" alt="/" width ="500px" height ="350px" style="float: right; margin-right:50px">
+    <img src="conf 2.png" alt="/" width ="500px" height ="350px" style="float: right; margin-right:200px">
     <p><h3 style ="color:rgb(79, 210, 253) ; margin-left:40px;">OUR PROMISE</h3></p>
     <p><h1 style="margin-left:40px;">Tool <strong>built for people</strong></h1></p>
     <p style="margin-left :40px;">whether you want to edit your Google Docs<br>resolve Jira issues,or collaborate over Zoom.</p>
     <p style="margin-left:40px;">Circle has 100+ integrations with tools you<br>already use and love.</p>
     <ul style ="padding-block:10px; margin:10px; background-color:rgb(172, 248, 223); scroll-padding-top:2px">
-    <p><h4 style ="margin-left: 50px;"><span>Get started free></span></h4></p>
+    <p><h4 style ="margin-left: 50px; padding: 10px;"><button>Get started free></button></h4></p>
     </ul>
  <br><br>
 
@@ -151,20 +151,169 @@
 </style>
 
 <div class ="hand">
-    <h1><div class = "item" style ="color:blue">Create</div></h1>
-    <h1><div class = "item">Distribute</div></h1>
-    <h1><div class = "item">collect</div></h1>
-    <h1><div class = "item">Analyze</div></h1>
+    <h1><div class = "item" style ="color:blue"><button>Create</button></div></h1>
+    <h1><div class = "item"><button>Distribute</button></div></h1>
+    <h1><div class = "item"><button>Collect</button></div></h1>
+    <h1><div class = "item"><button>Analyze</button></div></h1>
     </div>
 <br><br>
-    <class
+
+    <img src="lap photo.jpg" alt="/" width ="500px" height ="350px" style="float: right; margin-right:150px;">
+    <p><h1 style ="color:rgb(79, 210, 253) ; margin-left:40px;">CREATE</h1></p>
+    <p><h2 style="margin-left:40px;"> Advanced research software</h2></p>
+    <p style="margin-left :40px;">Ak the right questions and get the answers you<br><br>
+      need  with the most secure and collaborative<br><br>
+      survey platform on the market featuring<br><br>powerful logic, sophisticated analytics,and<br><br> built -in automation and integration.</p>
+
+    <ul style ="padding-block:10px; margin:10px; background-color:rgb(172, 248, 223); scroll-padding-top:2px">
+    <p><h4 style ="margin-left: 50px;"><span><button>Get started free></button></span></h4></p>
+    </ul>
+<br><br>
+<hr>
+<br><br>
+<img src="ima3 (1).png" alt="/" width ="400px" height ="350px" style="float: right; margin-right:400px;">
+<img src="ima8.png" alt="/" width ="100px" height ="100px" style="float: right;margin-right: 10px;">
+<p><h4 style ="color:rgb(79, 210, 253) ; margin-left:40px;">TESTIMONIALS</h4></p>
+<p style="margin-left:40px; font-size: 50px;">See how <br>customers <br><strong>drive impact</strong></p>
 
 
+<ul style ="padding-block:10px; margin:10px; background-color:rgb(172, 248, 223); scroll-padding-top:2px">
+<p><h4 style ="margin-left: 50px;"><span><button>See case studies</button></span></h4></p>
+</ul>
+<br><br>
+<hr>
+<br><br>
+<img src="ima4 (1).png" alt="/" width ="400px" height ="350px" style="float: right; margin-right:200px;">
+<p style="margin-left:40px; font-size: 50px;">Lookin for a<strong> solution</strong><br>for you business?</p>
+<p style = " margin-left:40px;font-size:20px;">Check out Sogolytics enterprise feedback and <br>experience management platform</p>
+<ul style ="padding-block:10px; margin:10px; background-color:rgb(172, 248, 223); scroll-padding-top:2px">
+<p><h4 style ="margin-left: 50px;"><span><button>Learn more</button></span></h4></p>
+<p><h4 style ="margin-left: 50px;"><span><button>Schedule a consultation</button></span></h4></p>
+<br><br>
+<hr>
+<br><br>
+<center><p><h4 style ="color:rgb(79, 210, 253) ; margin-left:40px;">RESOURCES</h4></p></center>
+<center><p style=" font-size: 50px;"><strong>Stay</strong> in the <strong>know</strong></center>
 
 
+<style>
 
- 
-    </body>
+.img7f{
+    display: flex;
+    justify-content: space-evenly;
+    font-size: smaller;
+    gap: 30px;
+}
+.f1{
+padding: 35px;
+background-color: aliceblue;
+}
+</style>
+                       <div class="img7f"> 
+                        <div class="f1">
+                           <div class="img14">
+                               <img src="ima5.png" alt="img" width="300" height="100">
+                               <h4>Excepteur sint occaecat cupidatat <br>non proident</h4>
+                               <p>Nemo emi ipsam voluptatem quia<br>voluptas sit aspernatur aut odit aut fugit,<br>sed quia consequuntur magni dolores eos<br><br>
+                               Neque porro quisuam est, qui dolorem<br>ipsum quia dolor  amet, consecteur, adipisci veli</p>
+                               <button>Read more</button>
+                           </div>
+                         </div>
+                        <style>
+                         .f2{
+                          padding: 35px;
+                          background-color: aliceblue;
+                      }
+                    </style><div class="f2">
+          <div class="img13">
+              <img src="football.png" alt="img" width="300" height="100">
+              <h4>Quis nostrum exercitationem ullam<br>corporis laboriosam</h4>
+              <p>Ut enim ad minima veniam,quis nostrum<br>exercitationem ullam corporis suscipit<br>laboriosam.<br><br>
+              nisi ut aliquid ex ea commodi consequatur<br>autem vel eum iure reprehenderit.</p>
+              <button>Read more</button>
+          </div>
+    </div>
+    <style>.f3{
+      padding: 35px;
+      background-color: aliceblue; }
+</style>
+    <div class="f3">
+      <div class="img12">
+          <img src="ima7.png" alt="img" width="300" height="100">
+          <h4>lorem ipsum dolor sit amet,<br>consectetur adipiscing elit.</h4>
+          <p>Coluptatem accusantium doloremque<br>laudantium,totam rem aperiam
+          <br><br>
+           Aaque ipsa quae ab illo inventore veritatis et <br>architecto beatae vitae dicta sunt<br>explicabo.<br><br><br><br>
+          <button>Read more</button>
+      </div></div>
+  </div>
+</div>
+<hr>
+<style>.lime{
+  display: flex;
+  list-style-type: style type;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  background-color: black;
+  font-size: 10x;
+}
+</style>
+<style>
+.soda{
 
-</html>
+  column-gap: 5px;
+  padding: 30px;
+  font-size: 10px;
+  align-items: center;
+  align-content: center;
+  text-align: center;
+}
+</style>
+  <div class="lime">
+      <center><div class="soda"><img src="map1.png" alt="/" width="250" height="250" style ="margin-left:100px;"/></div></center>
+      <div class="soda">
+          <h2 style="color:rgb(248, 243, 243);">Products</h2><br>
+          <p style="color: rgb(248, 243, 243);">Delta</p><br>
+          <p style="color: rgb(248, 243, 243);">Sigma</p><br>
+          <p style="color: rgb(248, 243, 243);">Zeta</p><br>
+          <p style="color: rgb(248, 243, 243);">Acumen</p><br>
+      </div>
+      <div class="soda">
+          <h2 style="color:rgb(248, 243, 243);">Resources</h2><br>
+          <p style="color: rgb(248, 243, 243);">Help</p><br>
+          <p style="color: rgb(248, 243, 243);">Training Videos</p><br>
+          <p style="color: rgb(248, 243, 243);">Webinars</p><br>
+          <p style="color: rgb(248, 243, 243);">Request a Demo</p><br>    
+          <p style="color: rgb(248, 243, 243);">Create Surveys</p><br>      
+          <p style="color: rgb(248, 243, 243);">QuizMaker</p><br>    
+      </div>
+      <div class="soda">
+          <h2 style="color:rgb(248, 243, 243);">Company</h2><br>
+          <p style="color: rgb(248, 243, 243);">AboutUs</p><br>
+          <p style="color: rgb(248, 243, 243);">Careers</p><br>
+          <p style="color: rgb(248, 243, 243);">Team</p><br>
+          <p style="color: rgb(248, 243, 243);">ContactUs</p><br>
+          <br><br><br><br><br><br><br><br>
+      </div>
+    </div>
+    </ul>
+    <br><br>
+    <hr>
+    <br><br>
+    <style>
+        .leg{
+            display: flex;
+            flex-direction:row;
+        }
 
+    </style>
+    <div class ="leg">
+    <p style ="font-size :10px;margin-left:20px;">copyright 2022 Circle.All rights reserved.</p>
+    <center><img src ="in.png" width="50" height="50" style="margin-left:400px;"></center>
+    <center><img src ="twitter.png" width="50" height="50" style=></center>
+    <p style="color:black;font-size:10px;margin-right:5px;">Privacy Policy | Data & Security | Terms of Service | Data & Security</p>
+
+    </div>
+
+    </html>
